Yeong-Huns/src/main/java/org/example/yeonghuns/config/Error/exception/team/TeamNotFoundException.java
package org.example.yeonghuns.config.Error.exception.team;

import org.example.yeonghuns.config.Error.ErrorCode;
import org.example.yeonghuns.config.Error.exception.NotFoundException;

public class TeamNotFoundException extends NotFoundException {
    public TeamNotFoundException() {
        super(ErrorCode.TEAM_NOT_FOUND);
    }
}
